# 15780project

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
configs/: generate.yaml  generate_llama32_3b_baseline.yaml  generate_llama32_3b_baseline_sample.yaml  generate_llama32_3b_full.yaml  generate_llama32_3b_full_sample.yaml  generate_llama32_3b_pilot_sample.yaml  generate_llama32_3b_processed.yaml  generate_qwen25_3b_baseline_sample.yaml  generate_qwen25_3b_full_sample.yaml  judge.yaml  judge_llama32_3b_baseline.yaml  judge_llama32_3b_baseline_sample.yaml  judge_llama32_3b_pilot_sample.yaml  judge_llama32_3b_processed.yaml  train.yaml  train_llama32_3b_full.yaml  train_llama32_3b_processed.yaml  train_qwen25_3b_full.yaml  train_qwen25_7b.yaml
data/: README.md
data/examples/: test.jsonl  train.jsonl  validation.jsonl
docs/: finetuning_overview.md
results/: current_progress.md  llama32_3b_full_metrics.json  llama32_3b_pilot_metrics.json  llama32_3b_pilot_report.md  qwen25_3b_full_metrics.json  sample_evaluation_metrics.json
scripts/: bt_interval.py  judge_pairwise.py  judge_rubric.py  make_pairwise.py  run.py  summarize_pairwise.py  summarize_rubric.py
src/persuasion_llm/: __init__.py  pipeline.py
