[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "persuasion-llm"
version = "0.1.0"
description = "Fine-tuning and evaluation scaffold for a persuasion-focused chatbot built on Llama-3.1-8B-Instruct."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "accelerate>=1.2.1",
  "bitsandbytes>=0.45.0",
  "datasets>=3.1.0",
  "huggingface-hub>=0.27.0",
  "numpy>=1.26.0",
  "openai>=1.68.0",
  "peft>=0.14.0",
  "pydantic>=2.10.0",
  "python-dotenv>=1.0.1",
  "PyYAML>=6.0.2",
  "rouge-score>=0.1.2",
  "scikit-learn>=1.6.0",
  "sentencepiece>=0.2.0",
  "torch>=2.5.1",
  "transformers>=4.49.0",
  "trl>=0.13.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
